--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <!-- Global CSS -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <!-- github calendar css -->
-    <link rel="stylesheet" href="assets/plugins/github-calendar/dist/github-calendar.css">
+    <link rel="stylesheet" href="./assets/plugins/github-calender/dist/github-calendar.css">
     <!-- github acitivity css -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
-    <link rel="stylesheet" href="assets/plugins/github-activity/github-activity-0.1.5.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./assets/plugins/github-activity/github-activity.css">
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -32,29 +32,29 @@
     <!-- ******HEADER****** -->
     <header class="header">
         <div class="container clearfix">
-            <img class="profile-image img-fluid float-left" src="assets/images/profile.jpg" alt="James Lee"
+            <img class="profile-image img-fluid float-left" src="assets/images/profile.jpg" alt="Victor Abuke"
                 style="width: 350px;" />
             <div class="profile-content float-left">
                 <h1 class="name">Victor Abuke</h1>
                 <h2 class="desc">Software Developer</h2>
                 <ul class="social list-inline">
                     <li class="list-inline-item">
-                        <a href="https://twitter.com/NengakDakup" target="_blank">
+                        <a href="https://x.com/sly2tuff" target="_blank">
                             <i class="fab fa-twitter"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.linkedin.com/in/nengakdakup/" target="_blank">
+                        <a href="https://www.linkedin.com/in/victor-abuke-5b28a4246/" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.github.com/NengakDakup/" target="_blank">
+                        <a href="https://github.com/Chronos91" target="_blank">
                             <i class="fab fa-github-alt"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://stackoverflow.com/users/10713843/nengak-dakup" target="_blank">
+                        <a href="" target="_blank">
                             <i class="fab fa-stack-overflow"></i>
                         </a>
                     </li>
@@ -251,13 +251,38 @@
                     <div class="section-inner">
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
+
+                            <!--//item-->
+                            <div class="item">
+                                <h3 class="title">
+                                    Backend Developer -
+                                    <span class="place"><a href="#">Jolly Tech</a></span>
+                                    <span class="year">(2023 - 2024)</span>
+                                </h3>
+                                <p>Contributed to the development and maintenance of backend systems and services:</p>
+                                <ul>
+                                    <li>Developed and maintained scalable and high-performance backend systems and APIs
+                                        for various applications.</li>
+                                    <li>Managed database tasks including schema design, query optimization, and data
+                                        integrity, along with regular backups and migrations.</li>
+                                    <li>Created and optimized RESTful APIs for seamless integration with frontend
+                                        applications and third-party services.</li>
+                                    <li>Implemented performance tuning techniques to enhance system efficiency and
+                                        responsiveness.</li>
+                                    <li>Collaborated with frontend developers, project managers, and stakeholders to
+                                        ensure successful project delivery.</li>
+                                    <li>Troubleshot and resolved backend issues, providing timely support to maintain
+                                        application stability.</li>
+                                </ul>
+                            </div>
+                            <!--//item-->
                             <div class="item">
                                 <h3 class="title">
                                     Backend Developer -
                                     <span class="place">
-                                        <a href="https://boardbrain.net">Boardbrain</a>
+                                        <a href="">Monstro</a>
                                     </span>
-                                    <span class="year">(2019 - Present)</span>
+                                    <span class="year">(2019 - 2021)</span>
                                 </h3>
                                 <p>Led the development and optimization of backend services for a tech company. Key
                                     achievements include:</p>
@@ -356,18 +381,18 @@
                                 <li>
                                     <i class="fas fa-map-marker-alt"></i>
                                     <span class="sr-only">Location:</span>
-                                    Plateau, Jos, Nigeria
+                                    Dublin, Ireland
                                 </li>
                                 <li>
                                     <i class="fas fa-envelope"></i>
                                     <span class="sr-only">Email:</span>
-                                    <a href="#">nengakdakup@gmail.com</a>
+                                    <a href="#">flaco.hex2@gmail.com</a>
                                 </li>
                                 <li>
                                     <i class="fas fa-link"></i>
                                     <span class="sr-only">Website:</span>
-                                    <a href="http://www.nenosoft-tech.rf.gd/"
-                                        target="_blank">http://www.nenosoft-tech.rf.gd/</a>
+                                    <a href="https://github.com/Chronos91"
+                                        target="_blank">https://github.com/Chronos91</a>
                                 </li>
                             </ul>
                         </div>
@@ -501,9 +526,9 @@
                                     </p>
                                 </blockquote>
                                 <p class="source">
-                                    <span class="name">Mike Comey</span>
+                                    <span class="name">James Comey</span>
                                     <br />
-                                    <span class="title">CEO Boardbrain</span>
+                                    <span class="title">CEO Excellerate </span>
                                 </p>
                             </div>
                             <!--//item-->
@@ -608,17 +633,17 @@
     </footer>
     <!--//footer-->
     <!-- Javascript -->
-    <script type="text/javascript" src="assets/plugins/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/popper.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script>
+    <script type="text/javascript" src="./assets/plugins/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="./assets/plugins/popper.min.js"></script>
+    <script type="text/javascript" src="./assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script>
     <!-- github calendar plugin -->
-    <script type="text/javascript" src="assets/plugins/github-calendar/dist/github-calendar.min.js"></script>
+    <script type="text/javascript" src="./assets/plugins/github-calender/dist/github-calendar.min.js"></script>
     <!-- github activity plugin -->
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/github-activity/github-activity-0.1.5.min.js"></script>
+    <script type="text/javascript" src="./assets/plugins/mustache.min.js"></script>
+    <script type="text/javascript" src="./assets/plugins/github-activity/github-activity.js"></script>
     <!-- custom js -->
-    <script type="text/javascript" src="assets/js/main.js"></script>
+    <script type="text/javascript" src="./assets/js/main.js"></script>
 </body>
 
 </html>
