--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nengak Dakup | Portfolio">
-    <meta name="author" content="Dakup Nengak">
+    <meta name="description" content="Victor Abuke | Portfolio">
+    <meta name="author" content="Victor Abuke">
     <link rel="shortcut icon" href="favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet'
         type='text/css'>
@@ -66,7 +66,7 @@
                 </ul>
             </div>
             <!--//profile-->
-            <a class="btn btn-cta-primary float-right" href="mailto:nengakdakup@gmail.com" target="_blank">
+            <a class="btn btn-cta-primary float-right" href="mailto:flaco.hex2@gmail.com" target="_blank">
                 <i class="fas fa-paper-plane"></i>
                 Contact Me
             </a>
@@ -98,22 +98,20 @@
                         <h2 class="heading">My Projects</h2>
                         <div class="content">
                             <div class="item row">
-                                <a class="col-md-4 col-12" href="https://yourdomain.com/social-media-app"
-                                    target="_blank">
+                                <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
                                     <img class="img-fluid project-image"
                                         src="assets/images/projects/social-media-app.png" alt="Social Media App" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">
-                                        <a href="https://yourdomain.com/social-media-app" target="_blank">Social Media
+                                        <a href="https://github.com/Chronos91" target="_blank">Social Media
                                             App - Connect and Engage</a>
                                     </h3>
                                     <p class="mb-2">A platform enabling users to connect, share, and engage.
                                         Features include real-time messaging, user profiles, and customizable feeds, all
                                         built with Django and advanced database management.</p>
                                     <p>
-                                        <a class="more-link" href="https://yourdomain.com/social-media-app"
-                                            target="_blank">
+                                        <a class="more-link" href="https://github.com/Chronos91" target="_blank">
                                             <i class="fas fa-external-link-alt"></i> Find out more
                                         </a>
                                     </p>
@@ -122,13 +120,13 @@
                             </div>
                             <!--//item-->
                             <div class="item row">
-                                <a class="col-md-4 col-12" href="https://yourdomain.com/edutrack" target="_blank">
+                                <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
                                     <img class="img-fluid project-image" src="assets/images/projects/edutrack.png"
                                         alt="EDUTRACK" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">
-                                        <a href="https://yourdomain.com/edutrack" target="_blank">EDUTRACK -
+                                        <a href="https://github.com/Chronos91" target="_blank">EDUTRACK -
                                             Comprehensive Learning Management</a>
                                     </h3>
                                     <p class="mb-2">A robust education platform designed for students to track their
@@ -136,7 +134,7 @@
                                         authentication, goal setting, and progress visualization, all implemented with
                                         Django and advanced AI integration.</p>
                                     <p>
-                                        <a class="more-link" href="https://yourdomain.com/edutrack" target="_blank">
+                                        <a class="more-link" href="https://github.com/Chronos91" target="_blank">
                                             <i class="fas fa-external-link-alt"></i> Find out more
                                         </a>
                                     </p>
@@ -145,13 +143,13 @@
                             </div>
                             <!--//item-->
                             <div class="item row">
-                                <a class="col-md-4 col-12" href="https://yourdomain.com/netflix-clone" target="_blank">
+                                <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
                                     <img class="img-fluid project-image" src="assets/images/projects/netflix-clone.png"
                                         alt="Netflix Clone" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">
-                                        <a href="https://yourdomain.com/netflix-clone" target="_blank">Netflix Clone -
+                                        <a href="https://github.com/Chronos91" target="_blank">Netflix Clone -
                                             Streamlined Entertainment</a>
                                     </h3>
                                     <p class="mb-2">A media streaming application that mimics the Netflix
@@ -159,8 +157,7 @@
                                         and personalized recommendations, developed using Django and advanced front-end
                                         technologies.</p>
                                     <p>
-                                        <a class="more-link" href="https://yourdomain.com/netflix-clone"
-                                            target="_blank">
+                                        <a class="more-link" href="https://github.com/Chronos91" target="_blank">
                                             <i class="fas fa-external-link-alt"></i> Find out more
                                         </a>
                                     </p>
@@ -169,22 +166,20 @@
                             </div>
                             <!--//item-->
                             <div class="item row">
-                                <a class="col-md-4 col-12" href="https://yourdomain.com/ai-blog-generator"
-                                    target="_blank">
+                                <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
                                     <img class="img-fluid project-image"
                                         src="assets/images/projects/ai-blog-generator.png" alt="AI Blog Generator" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">
-                                        <a href="https://yourdomain.com/ai-blog-generator" target="_blank">AI Blog
+                                        <a href="https://github.com/Chronos91" target="_blank">AI Blog
                                             Generator - Automated Content Creation</a>
                                     </h3>
                                     <p class="mb-2">An intelligent blog generator that transforms YouTube video links
                                         into insightful articles. Utilizes NLP algorithms and Django for seamless
                                         content generation and user interaction.</p>
                                     <p>
-                                        <a class="more-link" href="https://yourdomain.com/ai-blog-generator"
-                                            target="_blank">
+                                        <a class="more-link" href="https://github.com/Chronos91" target="_blank">
                                             <i class="fas fa-external-link-alt"></i> Find out more
                                         </a>
                                     </p>
@@ -193,20 +188,20 @@
                             </div>
                             <!--//item-->
                             <div class="item row">
-                                <a class="col-md-4 col-12" href="https://yourdomain.com/weather-app" target="_blank">
+                                <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
                                     <img class="img-fluid project-image" src="assets/images/projects/weather-app.png"
                                         alt="Weather App" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">
-                                        <a href="https://yourdomain.com/weather-app" target="_blank">Weather App -
+                                        <a href="https://github.com/Chronos91" target="_blank">Weather App -
                                             Real-Time Forecasting</a>
                                     </h3>
                                     <p class="mb-2">A comprehensive weather forecasting app that provides real-time
                                         weather updates and forecasts. Built using Python and Django, integrated with
                                         the OpenWeatherMap API for accurate and timely data.</p>
                                     <p>
-                                        <a class="more-link" href="https://yourdomain.com/weather-app" target="_blank">
+                                        <a class="more-link" href="https://github.com/Chronos91" target="_blank">
                                             <i class="fas fa-external-link-alt"></i> Find out more
                                         </a>
                                     </p>
