fixed projects pngs

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                         <div class="content">
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
-                                    <img class="img-fluid project-image"
-                                        src="assets/images/projects/social-media-app.png" alt="Social Media App" />
+                                    <img class="img-fluid project-image" src="./assets/images/projects/socialbook.png"
+                                        alt="Social Media App" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">
@@ -121,8 +121,7 @@
                             <!--//item-->
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/images/projects/edutrack.png"
-                                        alt="EDUTRACK" />
+                                    <img class="img-fluid project-image" src="" alt="EDUTRACK" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">
@@ -144,7 +143,7 @@
                             <!--//item-->
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/images/projects/netflix-clone.png"
+                                    <img class="img-fluid project-image" src="./assets/images/projects/netflix.png"
                                         alt="Netflix Clone" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
@@ -167,8 +166,8 @@
                             <!--//item-->
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
-                                    <img class="img-fluid project-image"
-                                        src="assets/images/projects/ai-blog-generator.png" alt="AI Blog Generator" />
+                                    <img class="img-fluid project-image" src="./assets/images/projects/aiblog (1).png"
+                                        alt="AI Blog Generator" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">
@@ -189,7 +188,7 @@
                             <!--//item-->
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/images/projects/weather-app.png"
+                                    <img class="img-fluid project-image" src="./assets/images/projects/weather.png"
                                         alt="Weather App" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
