--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                             <!--//item-->
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
-                                    <img class="img-fluid project-image" src="" alt="EDUTRACK" />
+                                    <img class="img-fluid project-image" src="./assets/images/projects/edutrack.png"
+                                        alt="EDUTRACK" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">
