--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
                                 <h3 class="title">
                                     Backend Developer -
                                     <span class="place">
-                                        <a href="">Monstro</a>
+                                        <a href=""></a>
                                     </span>
-                                    <span class="year">(2019 - 2021)</span>
+                                    <span class="year">(freelance)</span>
                                 </h3>
                                 <p>Led the development and optimization of backend services for a tech company. Key
                                     achievements include:</p>
@@ -288,7 +288,7 @@
                                         segmentation features.</li>
                                     <li>Integrated a real-time chat system, enhancing customer support and user
                                         engagement.</li>
-                                    <li>Built an admin dashboard with comprehensive data insights, improving operational
+                                    <li>Built an admin dashboard with data insights, improving operational
                                         efficiency.</li>
                                 </ul>
                             </div>
@@ -299,7 +299,7 @@
                                     <span class="place">
                                         <a href="https://learnblue.org">Learnblue</a>
                                     </span>
-                                    <span class="year">(2019 - Present)</span>
+                                    <span class="year">(2020 - Present)</span>
                                 </h3>
                                 <p>Contributed to the development and maintenance of a non-profit educational platform
                                     by:</p>
@@ -316,7 +316,7 @@
                                     <span class="place">
                                         <a href="https://nhub.org.ng">Nhub</a>
                                     </span>
-                                    <span class="year">(2017 - 2018)</span>
+                                    <span class="year">(2019 - 2020)</span>
                                 </h3>
                                 <p>Developed enterprise-level web applications for various businesses, featuring:</p>
                                 <ul>
