--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">
-                                        <a href="https://github.com/Chronos91" target="_blank">Social Media
+                                        <a href="https://web-production-d8323.up.railway.app/#" target="_blank">Social
+                                            Media
                                             App - Connect and Engage</a>
                                     </h3>
                                     <p class="mb-2">A platform enabling users to connect, share, and engage.
