--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
                         <h2 class="heading">My Projects</h2>
                         <div class="content">
                             <div class="item row">
-                                <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
+                                <a class="col-md-4 col-12" href="https://web-production-d8323.up.railway.app/#"
+                                    target="_blank">
                                     <img class="img-fluid project-image" src="./assets/images/projects/socialbook.png"
                                         alt="Social Media App" />
                                 </a>
@@ -112,8 +113,35 @@
                                         Features include real-time messaging, user profiles, and customizable feeds, all
                                         built with Django and advanced database management.</p>
                                     <p>
-                                        <a class="more-link" href="https://github.com/Chronos91" target="_blank">
-                                            <i class="fas fa-external-link-alt"></i> Find out more
+                                        <a class="more-link" href="https://github.com/Chronos91/SocialMediaApp"
+                                            target="_blank">
+                                            <i class="fas fa-external-link-alt"></i> github repo
+                                        </a>
+                                    </p>
+                                </div>
+                                <!--//desc-->
+                            </div>
+                            <!--//item-->
+                            <div class="item row">
+                                <a class="col-md-4 col-12" href="https://web-production-06e6.up.railway.app/"
+                                    target="_blank">
+                                    <img class="img-fluid project-image" src="./assets/images/projects/netflix.png"
+                                        alt="Netflix Clone" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title">
+                                        <a href="https://web-production-06e6.up.railway.app/" target="_blank">Netflix
+                                            Clone -
+                                            Streamlined Entertainment</a>
+                                    </h3>
+                                    <p class="mb-2">A media streaming application that mimics the Netflix
+                                        experience. Includes features such as user authentication, content streaming,
+                                        and personalized recommendations, developed using Django and advanced front-end
+                                        technologies.</p>
+                                    <p>
+                                        <a class="more-link" href="https://github.com/Chronos91/netflixfy"
+                                            target="_blank">
+                                            <i class="fas fa-external-link-alt"></i> github repo
                                         </a>
                                     </p>
                                 </div>
@@ -134,29 +162,6 @@
                                         learning goals, progress, and receive AI-driven feedback. Features include user
                                         authentication, goal setting, and progress visualization, all implemented with
                                         Django and advanced AI integration.</p>
-                                    <p>
-                                        <a class="more-link" href="https://github.com/Chronos91" target="_blank">
-                                            <i class="fas fa-external-link-alt"></i> Find out more
-                                        </a>
-                                    </p>
-                                </div>
-                                <!--//desc-->
-                            </div>
-                            <!--//item-->
-                            <div class="item row">
-                                <a class="col-md-4 col-12" href="https://github.com/Chronos91" target="_blank">
-                                    <img class="img-fluid project-image" src="./assets/images/projects/netflix.png"
-                                        alt="Netflix Clone" />
-                                </a>
-                                <div class="desc col-md-8 col-12">
-                                    <h3 class="title">
-                                        <a href="https://github.com/Chronos91" target="_blank">Netflix Clone -
-                                            Streamlined Entertainment</a>
-                                    </h3>
-                                    <p class="mb-2">A media streaming application that mimics the Netflix
-                                        experience. Includes features such as user authentication, content streaming,
-                                        and personalized recommendations, developed using Django and advanced front-end
-                                        technologies.</p>
                                     <p>
                                         <a class="more-link" href="https://github.com/Chronos91" target="_blank">
                                             <i class="fas fa-external-link-alt"></i> Find out more
